--- a/editor/CMakeLists.txt
+++ b/editor/CMakeLists.txt
@@ -6,6 +6,8 @@ project(${PROJECT_NAME})
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
+set(CMAKE_CXX_COMPILER clang++)
+
 include(FetchContent)
 
 add_executable(${PROJECT_NAME} src/main.cpp)
