--- a/editor/CMakeLists.txt
+++ b/editor/CMakeLists.txt
@@ -3,13 +3,15 @@ cmake_minimum_required(VERSION 3.15 FATAL_ERROR)
 set(PROJECT_NAME Editor)
 project(${PROJECT_NAME})
 
-set(CMAKE_CXX_STANDARD 20)
-set(CMAKE_CXX_STANDARD_REQUIRED ON)
-
-set(CMAKE_CXX_COMPILER clang++)
-
-include(FetchContent)
-
 add_executable(${PROJECT_NAME} src/main.cpp)
 
-target_link_libraries(${PROJECT_NAME} Engine)
+target_link_libraries(${PROJECT_NAME} Engine spdlog)
+
+set_target_properties(${PROJECT_NAME}
+    PROPERTIES RUNTIME_OUTPUT_DIRECTORY
+    ${CMAKE_BINARY_DIR}/bin/
+)
+
+source_group(TREE ${CMAKE_CURRENT_SOURCE_DIR} FILES
+    src/main.cpp
+)
