--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "external/glm"]
 	path = external/glm
 	url = https://github.com/g-truc/glm
+[submodule "External/imgui"]
+	path = External/imgui
+	url = https://github.com/ocornut/imgui
